--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                   <p class="text-faded mb-4">
                       En 2015 Mendel es el primer laboratorio de citogenética en el país acreditado bajo la norma NMX-EC-15189-IMNC-2015 (Requisitos de la calidad y competencia de los laboratorios clínicos) y en 2016 amplia el alcance a las áreas de biología y citogenética molecular.
                   </p>
-                  <a class="btn btn-light btn-xl js-scroll-trigger" href="#services" data-toggle="modal" data-target="#modal-acreditacion_ema">Saber más!</a>
+                  <a class="btn btn-light btn-xl js-scroll-trigger" data-toggle="modal" data-target="#modal-acreditacion_ema">Saber más!</a>
                 </div>
               </div>
             </div>
@@ -408,7 +408,7 @@
                   <div class="project-category text-faded">
                     Laboratorio clínico
                   </div>
-                  <div class="project-name">
+                  <div class="project-name text-justify">
                     Ofrecemos examenes de: Hematología, Inmunología y bioquímica sanguínea.
                   </div>
                 </div>
@@ -423,7 +423,7 @@
                   <div class="project-category text-faded">
                     Citogenética molecular (FISH)
                   </div>
-                  <div class="project-name">
+                  <div class="project-name text-justify">
                       Hibridación fluorescente en el sitio cromosómico de interés utilizando sondas específicas de DNA
                   </div>
                 </div>
@@ -438,7 +438,7 @@
                   <div class="project-category text-faded">
                       Biología molecular
                   </div>
-                  <div class="project-name">
+                  <div class="project-name text-justify">
                       Ofrece la detección de enfermedades
                       infecciosas a través de la detección de virus, tales como el VPH, VIH, VHB, entre otros.
                   </div>
@@ -454,7 +454,7 @@
                   <div class="project-category text-faded">
                       Citometría de flujo
                   </div>
-                  <div class="project-name">
+                  <div class="project-name text-justify">
                       Método que nos ayuda a conocer la cantidad, tamaño, complejidad y presencia de biomarcadores.
                   </div>
                 </div>
@@ -469,7 +469,7 @@
                   <div class="project-category text-faded">
                     Citogenética clásica
                   </div>
-                  <div class="project-name">
+                  <div class="project-name text-justify">
                     Consulte el status actual de sus exámenes.
                   </div>
                 </div>
@@ -484,7 +484,7 @@
                   <div class="project-category text-faded">
                     Blog
                   </div>
-                  <div class="project-name">
+                  <div class="project-name text-justify">
                     En nuestro blog, podrá iniciar temas de conversación con nuestros cientes, revisar testimonios de satisfacción, etc.
                   </div>
                 </div>
@@ -543,7 +543,7 @@
             <i class="fas fa-envelope fa-3x mb-3 sr-contact-2"></i>
             <p>
               <a href="mailto:contacto@mendel.mx" style="color: black;"> contacto@mendel.mx</a>
-              <a href="mailto:laboratoriosmendel@hotmail.com" style="color: black;"> laboratoriosmendel@hotmail.com</a>
+              <a href="mailto:laboratoriosmendel@hotmail.com" style="color: black;"> laboratoriosmendel@prodigy.net.mx</a>
             </p>
           </div>
         </div>
@@ -650,7 +650,7 @@
                     <strong style="color: rgba(12, 125, 201, 0.781);">Todos los estudios están acreditados bajo la norma NMX-15189-2015
                      (ISO 15189-2012).</strong> 
                 </p>
-                <h5>SERVICIOS MENDEL DEL SERVICIO PRE-POSTNATAL:</h5>
+                <h5>ESTUDIOS MENDEL DEL SERVICIO PRE-POSTNATAL:</h5>
                 <p>
                 <strong>Cariotipo regular en sangre periférica</strong> se indica en la detección de alteraciones
                 cromosómicas numéricas y estructurales, malformaciones físicas con o sin retraso
@@ -932,49 +932,21 @@
                   <div class="modal-body texto_descripcion" id="pre_postnatal_body">
                     <br>
                       <p>
-                          El área de BIOLOGÍA MOLECULAR ofrece la detección de enfermedades
-                          infecciosas a través de la detección de virus, tales como el VPH (virus del
-                          papiloma humana, VIH (virus de inmunodeficiencia humana), VHB (virus de
-                          hepatitis B), entre otros. También ofertamos un panel de enfermedades venéreas
-                          por métodos moleculares.
-
-                          De esta manera, damos continuidad a nuestra filosofía, transformar el cuidado de
-                          la salud de nuestros pacientes y brindar bienestar a las familias.
+                          A partir del año 2012 en Mendel se ha impulsado el desarrollo del área de BIOLOGÍA MOLECULAR, con la misión de realizar búsquedas de mutaciones a nivel del DNA que se asocian a enfermedades como las leucemias. Actualmente ofrecemos la detección de los marcadores neoplásicos más importantes de acuerdo a lo publicado por la Organización Mundial de la Salud (OMS) en 2017 y nuestro compromiso va más allá de ofertar estos estudios, ya que todos ellos están acreditados bajo la norma NMX-15189-2015 (ISO-15189-2012) y evaluados por la Entidad Mexicana de Acreditación, lo que garantiza un servicio confiable.
                       </p>
                       <p>
-                          El área principal de diagnóstico molecular se enfoca en los cánceres de la sangre
-                          (leucemias/neoplasias hematológicas), por ello ofrecemos paneles de diagnóstico
-                          para la Leucemia linfoblástica aguda, que es la más frecuente en niños y para
-                          Leucemia mieloide aguda, la cual es frecuente en adultos. 
+                          El área principal de diagnóstico molecular se enfoca en los cánceres de la sangre (leucemias/neoplasias hematológicas), por ello ofrecemos paneles de diagnóstico para la Leucemia linfoblástica aguda, que es la más frecuente en niños y para Leucemia mieloide aguda, la cual es frecuente en adultos. 
                       </p>
                       <p>
-                        También se diagnostican otras neoplasias como policitemia vera, mielofibrosis
-                          primaria, trombocitemia esencial, leucemia granulocítica crónica, entre otras.
-                          Detectar de manera oportuna estos padecimientos y de los marcadores
-                          moleculares asociados a ellao, contribuye a tener el mejor tratamiento y el mejor
-                          seguimiento de la enfermedad, lo que mejora el pronóstico de los pacientes y su
-                          calidad de vida.
+                          También se diagnostican otras neoplasias como policitemia vera, mielofibrosis primaria, trombocitemia esencial, leucemia granulocítica crónica, entre otras. Detectar de manera oportuna estos padecimientos y de los marcadores moleculares asociados a ellao, contribuye a tener el mejor tratamiento y el mejor seguimiento de la enfermedad, lo que mejora el pronóstico de los pacientes y su calidad de vida. 
                       </p>
                       <p>
-                          Ofrecemos servicios de pruebas de paternidad lo cual es un estudio confiable que
-                          permite identificar la relación padre- hijo. Además, se ofertan las pruebas de
-                          maternidad, abuelidad y parentesco (relación avuncular), servicio que da
-                          tranquilidad y bienestar a las familias. La determinación de estas pruebas es a
-                          través de la secuenciación de regiones de DNA que se heredan de padres a hijos
-                          de manera directa, estas regiones se conocen como STR´s (short tandem repeats)
-                          y realizando la comparación de los perfiles de los individuos analizados se
-                          determina la relación familiar. Estos estudios se realizan en sangre periférica y/o
-                          en células bucales obtenidas por un raspado con hisopos. Es muy importante
-                          informar que la toma de muestra la debe realizar personal calificado para
-                          garantizar la integridad de las mismas.
+                          Ofrecemos servicios de pruebas de paternidad lo cual es un estudio confiable que permite identificar la relación padre- hijo. Además, se ofertan las pruebas de maternidad, abuelidad y parentesco (relación avuncular), servicio que da tranquilidad y bienestar a las familias. La determinación de estas pruebas es a través de la secuenciación de regiones de DNA que se heredan de padres a hijos de manera directa, estas regiones se conocen como STR´s (short tandem repeats) y realizando la comparación de los perfiles de los individuos analizados se determina la relación familiar. Estos estudios se realizan en sangre periférica y/o en células bucales obtenidas por un raspado con hisopos. Es muy importante informar que la toma de muestra la debe realizar personal calificado para garantizar la integridad de las mismas. 
                         </p>
                         <p>
-                          También se diagnostican otras neoplasias como policitemia vera, mielofibrosis
-                            primaria, trombocitemia esencial, leucemia granulocítica crónica, entre otras.
-                            Detectar de manera oportuna estos padecimientos y de los marcadores
-                            moleculares asociados a ellao, contribuye a tener el mejor tratamiento y el mejor
-                            seguimiento de la enfermedad, lo que mejora el pronóstico de los pacientes y su
-                            calidad de vida.
+                          El área de BIOLOGÍA MOLECULAR ofrece la detección de enfermedades infecciosas a través de la detección de virus, tales como el VPH (virus del papiloma humana, VIH (virus de inmunodeficiencia humana), VHB (virus de hepatitis B), entre otros. También ofertamos un panel de enfermedades venéreas por métodos moleculares.
+
+                          De esta manera, damos continuidad a nuestra filosofía, transformar el cuidado de la salud de nuestros pacientes y brindar bienestar a las familias.
                         </p>
                   </div>
                 </div>
@@ -1009,7 +981,7 @@
                               inadecuada a la quimioterapia o disminuir la intensidad del tratamiento en
                               pacientes de bajo riesgo.</li>
                               <li>
-                                  c) <strong>ÍNDICE DE ADN:</strong> 
+                                  c) <strong>INDICE DE ADN:</strong> 
                                   Usado como factor pronóstico en ciertos tipos de
                               Leucemias. En donde un buen pronóstico = favorable para el paciente y mal pronóstico
                               = desfavorable para el paciente.</li>
