--- a/index.html
+++ b/index.html
@@ -388,6 +388,31 @@
             </div>
           </div>
         </div>
+
+        <div class="container" style="margin-top: 10%;">
+          <div class="row">
+            <div class="col-lg-12 text-center">
+              <h2 class="section-heading">Citometría de flujo</h2>
+              <hr class="my-4">
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-12 col-md-12 text-center">
+                <img src="img/Cito.png" class="img-circle" width="100" height="100">
+              </div>
+              <div class="col-lg-12 col-md-12 text-justify">
+                  <p class="text-muted mb-0">
+                       Citometría de Flujo es un método utilizado en laboratorios de alta especialidad que se basa en el uso de luz laser que incide sobre células transportadas por un flujo continuo y ordenado de líquido envolvente; con el objeto de conocer las características distintivas de una población celular; es decir, nos ayuda a conocer la cantidad, tamaño, complejidad y presencia de biomarcadores.
+                  </p>
+                  <br>
+                  <p class="text-muted mb-0">
+                      El tiempo de proceso de estos estudios es de 4 días hábiles y el tipo de muestra que se requiere es Médula ósea (Extraída por médico hematólogo) y sólo para la SUBPOBLACIÓN DE LINFOCITOS CD4/CD8 se requiere sangre periférica. 
+                  </p>
+              </div>
+            </div>
+          </div>
+        </div>
     </section>
 
     <section class="bg-dark text-white">
@@ -401,15 +426,15 @@
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" data-toggle="modal" data-target="#modal_tabla_clinicos">
-              <img class="img-fluid" src="img/cover_images/clinicos.jpg" alt="">
+            <a class="portfolio-box" href="#">
+              <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Laboratorio clínico
+                    Citogenética clásica
                   </div>
                   <div class="project-name text-justify">
-                    Ofrecemos examenes de: Hematología, Inmunología y bioquímica sanguínea.
+                    Consulte el status actual de sus exámenes.
                   </div>
                 </div>
               </div>
@@ -462,15 +487,15 @@
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="#">
-              <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
+            <a class="portfolio-box" data-toggle="modal" data-target="#modal_tabla_clinicos">
+              <img class="img-fluid" src="img/cover_images/clinicos.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Citogenética clásica
+                    Laboratorio clínico
                   </div>
                   <div class="project-name text-justify">
-                    Consulte el status actual de sus exámenes.
+                    Ofrecemos examenes de: Hematología, Inmunología y bioquímica sanguínea.
                   </div>
                 </div>
               </div>
@@ -626,7 +651,7 @@
       <div id="modal-acreditacion_ema" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
           <div class="modal-dialog modal-lg">
             <div class="modal-content">
-                <embed src="docs/MENDELAB S.A. DE C.V..pdf">
+                <embed src="docs/EMA.pdf">
             </div>
           </div>
         </div>
@@ -981,7 +1006,7 @@
                               inadecuada a la quimioterapia o disminuir la intensidad del tratamiento en
                               pacientes de bajo riesgo.</li>
                               <li>
-                                  c) <strong>INDICE DE ADN:</strong> 
+                                  c) <strong>ÍNDICE DE DNA:</strong> 
                                   Usado como factor pronóstico en ciertos tipos de
                               Leucemias. En donde un buen pronóstico = favorable para el paciente y mal pronóstico
                               = desfavorable para el paciente.</li>
