Correcciones en timeline

--- a/admin.html
+++ b/admin.html
@@ -32,7 +32,7 @@
                         <span class="flag">Demostración</span>
                         <span class="time-wrapper"><span class="time">Febrero 2019</span></span>
                     </div>
-                    <div class="desc">Se actualizan las imágenes de prueba por las definitivas, se corrigen algunos errores y fallosen resolución de imagenes, texto, presentación, etc. Se genera la DEMO del sitio web para validación del cliente</div>
+                    <div class="desc">Se actualizan las imágenes de prueba por las definitivas, se corrigen algunos errores y fallos en resolución de imagenes, texto, presentación, etc. Se genera la DEMO del sitio web para validación del cliente</div>
                 </div>
             </li>
 
@@ -43,7 +43,7 @@
                         <span class="flag">Desarrollo</span>
                         <span class="time-wrapper"><span class="time">Enero 2019</span></span>
                     </div>
-                    <div class="desc">Se realiza la maquetación del sitio implementando las imágenes y textos propuestos por el cliente.</div>
+                    <div class="desc">Se realiza la maquetación del sitio haciendo entregables para validación del diseño, se agregan inicialmente textos e imágenes de prueba con fines demostrativos.</div>
                 </div>
             </li>
 
