--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!DOCTYPE <html>
+</html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -44,36 +45,37 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#AboutUs" style="color:black;"> Nosotros</a>
+              <a class="nav-link js-scroll-trigger menu" href="#AboutUs" style="color: rgb(52, 96, 148);"> Nosotros</a>
             </li>
             <!--<li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#citogenetica" style="color:black;">
+              <a class="nav-link js-scroll-trigger" href="#citogenetica" style="color: rgb(52, 96, 148);">
                 Servicios
               </a>
             </li>-->
             <li class="nav-item dropdown">
-                <a class="nav-link js-scroll-trigger dropdown-toggle" href="#Services" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:black;">
+                <a class="nav-link js-scroll-trigger dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: rgb(52, 96, 148);">
                   Servicios
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#services">Citogenética Clásica</a>
-                  <a class="dropdown-item" href="" data-toggle="modal" data-target="#modal-fish">Citogenética Molecular (FISH)</a>
-                  <a class="dropdown-item" href="" data-toggle="modal" data-target="#modal-biologia_molecular">Biología molecular</a>
-                  <a class="dropdown-item" href="" data-toggle="modal" data-target="#modal-citometria_fllujo">Citometría de flujo</a>
-                  <a class="dropdown-item" href="" data-toggle="modal" data-target="#modal_tabla_clinicos">Laboratorio clínico</a>
+                  <a class="dropdown-item" href="#services" style="color: rgb(52, 96, 148);">Citogenética Clásica</a>
+                  <a class="dropdown-item" href="" data-toggle="modal" data-target="#modal-fish" style="color: rgb(52, 96, 148);">Citogenética Molecular (FISH)
+                    </a>
+                  <a class="dropdown-item" href="" data-toggle="modal" data-target="#modal-biologia_molecular" style="color: rgb(52, 96, 148);">Biología molecular</a>
+                  <a class="dropdown-item" href="" data-toggle="modal" data-target="#modal-citometria_fllujo" style="color: rgb(52, 96, 148);">Citometría de flujo</a>
+                  <a class="dropdown-item" href="" data-toggle="modal" data-target="#modal_tabla_clinicos" style="color: rgb(52, 96, 148);">Laboratorio clínico</a>
                 </div>
               </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#" style="color:black;">Noticias</a>
+              <a class="nav-link js-scroll-trigger" href="#" style="color: rgb(52, 96, 148);">Noticias</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio" style="color:black;">Blog</a>
+              <a class="nav-link js-scroll-trigger" href="#portfolio" style="color: rgb(52, 96, 148);">Blog</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#contact" style="color:black;">Contacto</a>
+                <a class="nav-link js-scroll-trigger" href="#contact" style="color: rgb(52, 96, 148);">Contacto</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#" style="color:black;">Buscar</a>
+                <a class="nav-link js-scroll-trigger" href="#" style="color: rgb(52, 96, 148);">Buscar</a>
             </li>
             <!--<li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#contact" style="color:black;">Contacto</a>
@@ -282,7 +284,7 @@
                 en el estado de Michoacán.
             </p>
             <a id="enlace-aviso_privacidad" data-toggle="modal" data-target="#modal-aviso_privacidad">
-              <strong>Aviso de Privacidad</strong>
+              <strong style="color: rgb(52, 96, 148);">Aviso de Privacidad</strong>
             </a>
             <p></p>
           </div>
@@ -604,14 +606,15 @@
                 }
 
                 .box-part{
-                    background:#FFF;
+                    background: rgb(52, 96, 148);
+                    color: #fff;
                     border-radius:10px;
                     padding:60px 10px;
                     margin:30px 0px;
                 }
 
                 .box-part:hover{
-                    background:#4183D7;
+                    cursor: pointer;
                 }
 
                 .social:hover {
