--- a/index.html
+++ b/index.html
@@ -551,29 +551,30 @@
                     <input type="email" name="e-mail" class="form-control" placeholder="Correo electrónico" />
                     <input type="tel" name="phone" class="form-control" placeholder="Número de teléfono"/>
                     <textarea name="text" id="" class="form-control" rows="4" placeholder="Escriba aquí su mensaje"></textarea>
-                    <button class="btn-send">Enviar</button>
+                    <button class="btn-send" style="background-color: rgb(52, 96, 148);">Enviar</button>
                   </form>
                 </div>
             </div>
         </div>
         <br>
+        <br>
         <div class="row"> 
-          <div class="col-lg-3 ml-auto text-center">
+          <div class="col-lg-3 ml-auto text-center" style="color: rgb(52, 96, 148);">
             <i class="fas fa-home fa-3x mb-3 sr-contact-1"></i>
             <p>Ortega y Montañez No. 327</p>
             <p>Col. Centro</p>
             <p>Morelia, Michoacán.</p>
           </div>
-          <div class="col-lg-3 ml-auto text-center">
+          <div class="col-lg-3 ml-auto text-center" style="color: rgb(52, 96, 148);">
             <i class="fas fa-phone fa-3x mb-3 sr-contact-1"></i>
             <p>(443) 320 2644</p>
             <p>(443) 317 5103</p>
           </div>
-          <div class="col-lg-3 mr-auto text-center">
+          <div class="col-lg-3 mr-auto text-center" style="color: rgb(52, 96, 148);">
             <i class="fas fa-envelope fa-3x mb-3 sr-contact-2"></i>
             <p>
-              <a href="mailto:contacto@mendel.mx" style="color: black;"> contacto@mendel.mx</a>
-              <a href="mailto:laboratoriosmendel@hotmail.com" style="color: black;"> laboratoriosmendel@prodigy.net.mx</a>
+              <a href="mailto:contacto@mendel.mx" style="color: rgb(52, 96, 148);"> contacto@mendel.mx</a>
+              <a href="mailto:laboratoriosmendel@hotmail.com" style="color: rgb(52, 96, 148);"> laboratoriosmendel@prodigy.net.mx</a>
             </p>
           </div>
         </div>
@@ -585,7 +586,7 @@
                               <i class="fa fa-facebook fa-3x" aria-hidden="true"></i>
                               
                   <div class="title">
-                    <a class="social" href="https://www.facebook.com/mendelab" target="_blank" style="color: black; text-decoration: none;">facebook.com/mendelab</a>
+                    <a class="social" href="https://www.facebook.com/mendelab" target="_blank" style="color: #fff; text-decoration: none;">facebook.com/mendelab</a>
                   </div>        
                  </div>
               </div>	 
