--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mendel | Especialistas en Genética Molecular</title>
-    <link rel="icon" href="img/cropped-logo.png">
+    <link rel="icon" type="image/png" href="img/cropped-logo.png">
     <!-- Bootstrap core CSS -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -69,7 +69,7 @@
               <a class="nav-link js-scroll-trigger" href="#" style="color: rgb(52, 96, 148);">Noticias</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio" style="color: rgb(52, 96, 148);">Blog</a>
+              <a class="nav-link js-scroll-trigger" href="blog.html" style="color: rgb(52, 96, 148);">Blog</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#contact" style="color: rgb(52, 96, 148);">Contacto</a>
